HW/k8s/k8s-update/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-version
  labels:
    app: nginx
    version: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: main
  template:
    metadata:
      labels:
        app: nginx
        version: main
    spec:
      containers:
        - name: nginx
          image: nginx:1.20
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-content
          configMap:
            name: main-version-config
