HW/k8s/k8s-update/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: nginx
    version: main
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
