HW/k8s/k8s-update/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
